# CuSSS

./: .gitignore  README.md  pyproject.toml  setup.py
cusss/: CMakeLists.txt
cusss/cpp/include/: sss.hpp
cusss/cpp/src/: sss.cpp
cusss/cuda/include/: sss_impl.hpp
cusss/cuda/src/: sss_impl.cu
cusss/ops/: __init__.py  sss_wrappers.py
tests/: test_sss.py
